[package]
name = "vless-wss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.26"
tokio-rustls = "0.26"
futures-util = "0.3"
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
subtle = "2"

[profile.release]
lto = true
codegen-units = 1
